Add grid layout styles for sample pages

--- a/grid_samples/grid_basic/area/index.html
+++ b/grid_samples/grid_basic/area/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/reset.css" />
-    <link rel="stylesheet" href="../assets/base.css" />
+    <link rel="stylesheet" href="../../assets/reset.css" />
+    <link rel="stylesheet" href="../../assets/base.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="padding-small">
@@ -15,28 +15,28 @@
       <h2 class="item1 boots-logo">Boots Fashion</h2>
       <img
         class="item2 img-fill"
-        src="../assets/img/boots.jpg"
+        src="../../assets/img/boots.jpg"
         alt=""
         width="1980"
         height="1512"
       />
       <img
         class="item3 img-fill"
-        src="../assets/img/shirts.jpg"
+        src="../../assets/img/shirts.jpg"
         alt=""
         width="1320"
         height="1980"
       />
       <img
         class="item4 img-fill"
-        src="../assets/img/shop.jpg"
+        src="../../assets/img/shop.jpg"
         alt=""
         width="1600"
         height="1144"
       />
       <img
         class="item5 img-fill"
-        src="../assets/img/bag.jpg"
+        src="../../assets/img/bag.jpg"
         alt=""
         width="1320"
         height="1980"
@@ -45,6 +45,6 @@
 
     <!-- ここまで -->
 
-    <script src="../assets/base.js"></script>
+    <script src="../../assets/base.js"></script>
   </body>
 </html>
