--- a/grid_samples/grid_basic/subgrid/index.html
+++ b/grid_samples/grid_basic/subgrid/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/reset.css" />
-    <link rel="stylesheet" href="../assets/base.css" />
+    <link rel="stylesheet" href="../../assets/reset.css" />
+    <link rel="stylesheet" href="../../assets/base.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="padding-small">
@@ -18,7 +18,7 @@
         <li class="item2">
           <img
             class="img-fill"
-            src="../assets/img/boots.jpg"
+            src="../../assets/img/boots.jpg"
             alt=""
             width="1980"
             height="1512"
@@ -27,7 +27,7 @@
         <li class="item3">
           <img
             class="img-fill"
-            src="../assets/img/shirts.jpg"
+            src="../../assets/img/shirts.jpg"
             alt=""
             width="1320"
             height="1980"
@@ -36,7 +36,7 @@
         <li class="item4">
           <img
             class="img-fill"
-            src="../assets/img/shop.jpg"
+            src="../../assets/img/shop.jpg"
             alt=""
             width="1600"
             height="1144"
@@ -45,7 +45,7 @@
         <li class="item5">
           <img
             class="img-fill"
-            src="../assets/img/bag.jpg"
+            src="../../assets/img/bag.jpg"
             alt=""
             width="1320"
             height="1980"
