Refactor grid layout styles and add new elements

--- a/every_layout/cover/index.html
+++ b/every_layout/cover/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../modular_scale.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../box/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <section class="box" style="max-width: 80%">
-      <div class="with-sidebar">
-        <div style="background-color: antiquewhite">サイドバー</div>
-        <div style="background-color: aqua">サイドバーではないコンテンツ</div>
+    <div class="cover box">
+        <div>最初の子要素</div>
+        <h2>中央揃えされる要素</h2>
+        <div>最後の子要素</div>
       </div>
-    </section>
+    </div>
   </body>
 </html>
