--- a/every_layout/switcher/index.html
+++ b/every_layout/switcher/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../box/style.css" />
+    <link rel="stylesheet" href="../stack/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="stack">
+      <section class="box">
+        <div class="switcher">
+          <div>子要素</div>
+          <div>子要素</div>
+          <div>子要素</div>
+          <div>子要素</div>
+        </div>
+      </section>
+      <section class="box">
+        <div class="switcher">
+          <div>子要素</div>
+          <div>子要素</div>
+          <div>子要素</div>
+          <div>子要素</div>
+          <div>子要素</div>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
