Refactor grid layout styles and update CSS settings

--- a/tests/gridTable/index.html
+++ b/tests/gridTable/index.html
@@ -10,9 +10,7 @@
   <body>
     <div class="stack">
       <section>
-        <table
-          class="grid-table grid-table-color grid-table-border grid-table-left-sticky"
-        >
+        <table class="grid-table color border left-sticky">
           <thead>
             <tr>
               <th>一番左の見出し</th>
@@ -69,7 +67,7 @@
         </table>
       </section>
       <section>
-        <table class="grid-table grid-table-color grid-table-gap">
+        <table class="grid-table color gap">
           <thead>
             <tr>
               <th>一番左の見出し</th>
