Refactor grid layout styles, update CSS settings, and improve code readability

--- a/every_layout/cluster/index.html
+++ b/every_layout/cluster/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
   <body>
     <div class="stack">
       <section>
-        <ul class="cluster-start box">
+        <ul class="cluster start box">
           <li>チョコレート</li>
           <li>パイナップル</li>
           <li>ミント</li>
@@ -45,9 +45,9 @@
         </ul>
       </section>
       <section>
-        <div class="box cluster-between">
+        <div class="box cluster between">
           <div class="box">私のWEBサイト</div>
-          <ul class="cluster-start">
+          <ul class="cluster start">
             <li>アバウト</li>
             <li>ブログ</li>
             <li>ショップ</li>
