--- a/every_layout/stack/index.html
+++ b/every_layout/stack/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,12 +10,17 @@
     <div class="stack" style="height: 90svh; background-color: antiquewhite">
       <div>子要素1</div>
       <div>子要素2</div>
-      <div class="stack-small">
-        <div>孫要素1</div>
-        <div>孫要素2</div>
+      <div class="stack small">
+        <div>stack small 1</div>
+        <div>stack small 2</div>
+      </div>
+      <div>子要素2</div>
+      <div class="stack large">
+        <div>stack large 1</div>
+        <div>stack large 2</div>
       </div>
       <div>子要素3</div>
-      <div class="stack-exception">Exception!</div>
+      <div class="exception">Exception!</div>
       <div>子要素4</div>
       <div>子要素5</div>
       <div>子要素6</div>
