--- a/every_layout/cover/index.html
+++ b/every_layout/cover/index.html
@@ -11,8 +11,21 @@
   <body>
     <div class="cover box">
         <div>最初の子要素</div>
-        <h2>中央揃えされる要素</h2>
+        <h2 class="cover-target">中央揃えされる要素</h2>
         <div>最後の子要素</div>
+      </div>
+    </div>
+    <div class="cover box">
+        <div>最初の子要素</div>
+        <h2 class="cover-target">中央揃えされる要素</h2>
+        <!-- <div>最後の子要素</div> -->
+      </div>
+    </div>
+    </div>
+    <div class="cover box">
+        <!-- <div>最初の子要素</div> -->
+        <h2 class="cover-target">中央揃えされる要素</h2>
+        <!-- <div>最後の子要素</div> -->
       </div>
     </div>
   </body>
