--- a/every_layout/switcher/index.html
+++ b/every_layout/switcher/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../box/style.css" />
     <link rel="stylesheet" href="../stack/style.css" />
+    <link rel="stylesheet" href="../modular_scale.css" />
   </head>
   <body>
     <div class="stack">
