Refactor grid layout styles and update CSS settings

--- a/every_layout/icon/index.html
+++ b/every_layout/icon/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../base.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../stack/style.css" />
     <link rel="stylesheet" href="../center/style.css" />
@@ -54,7 +55,7 @@
       </div>
       <!-- 自作のX印のアイコン -->
       <div style="font-size: 5rem" class="center">
-        <span class="with-icon">
+        <span class="withIcon">
           <svg
             class="icon"
             viewBox="0 0 10 10"
@@ -69,7 +70,7 @@
       </div>
       <!-- Icon レイアウト -->
       <div style="font-size: 5rem" class="center">
-        <span class="with-icon">
+        <span class="withIcon">
           <svg class="icon">
             <use xlink:href="#dogstamp"></use>
           </svg>
@@ -77,7 +78,7 @@
         </span>
       </div>
       <div style="font-size: 5rem" class="center">
-        <span class="with-icon small">
+        <span class="withIcon small">
           <svg class="icon">
             <use xlink:href="#dogstamp"></use>
           </svg>
@@ -85,7 +86,7 @@
         </span>
       </div>
       <div style="font-size: 5rem" class="center">
-        <span class="with-icon big">
+        <span class="withIcon big">
           <svg class="icon">
             <use xlink:href="#dogstamp"></use>
           </svg>
@@ -93,8 +94,8 @@
         </span>
       </div>
       <div style="font-size: 5rem" class="center">
-        <span class="with-icon">
-          <svg class="icon-lower">
+        <span class="withIcon">
+          <svg class="iconLower">
             <use xlink:href="#dogstamp"></use>
           </svg>
           close
