--- a/every_layout/cover/index.html
+++ b/every_layout/cover/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../modular_scale.css">
+    <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../box/style.css" />
     <title>Document</title>
@@ -11,20 +11,20 @@
   <body>
     <div class="cover box">
         <div>最初の子要素</div>
-        <h2 class="cover-target">中央揃えされる要素</h2>
+        <h2 class="coverTarget">中央揃えされる要素</h2>
         <div>最後の子要素</div>
       </div>
     </div>
     <div class="cover box">
         <div>最初の子要素</div>
-        <h2 class="cover-target">中央揃えされる要素</h2>
+        <h2 class="coverTarget">中央揃えされる要素</h2>
         <!-- <div>最後の子要素</div> -->
       </div>
     </div>
     </div>
     <div class="cover box">
         <!-- <div>最初の子要素</div> -->
-        <h2 class="cover-target">中央揃えされる要素</h2>
+        <h2 class="coverTarget">中央揃えされる要素</h2>
         <!-- <div>最後の子要素</div> -->
       </div>
     </div>
