--- a/every_layout/sidebar/index.html
+++ b/every_layout/sidebar/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../base.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../box/style.css" />
     <link rel="stylesheet" href="../modular_scale.css" />
@@ -10,7 +11,7 @@
   </head>
   <body>
     <section class="box" style="max-width: 80%">
-      <div class="with-sidebar">
+      <div class="withSidebar">
         <div style="background-color: antiquewhite">サイドバー</div>
         <div style="background-color: aqua">サイドバーではないコンテンツ</div>
       </div>
