Refactor HTML code for fieldset and radio button elements

--- a/elements/fieldsetAndRadioButton/index.html
+++ b/elements/fieldsetAndRadioButton/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      legend {
-        background-color: #000;
-        color: #fff;
-        padding: 3px 6px;
-      }
-
       input {
         margin: 0.4rem;
       }
