--- a/elements/labelAndInput/index.html
+++ b/elements/labelAndInput/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- TODO: formAndInput と統合 -->
     <div class="stack center">
       <!-- labelもinputもインライン要素である。 -->
       <section>
