Refactor HTML code for fieldset and radio button elements

--- a/elements/formAndInput/index.html
+++ b/elements/formAndInput/index.html
@@ -61,6 +61,7 @@
       <input type="submit" name="submit" value="検索" />
     </form>
     <!-- type=search の場合 -->
+    <!-- 検索フォームでは検索するとクエリパタメータが追加されるのが一般的だが、これはformタグによるGETで実現できる！ -->
     <form id="search-form" role="search">
       <input id="q" placeholder="Search" type="search" name="q" />
     </form>
